--- a/70_pf/tylenol/index.html
+++ b/70_pf/tylenol/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>타이레놀</title>
-    <link rel="stylesheet" href="./css/sec1.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="./script/sec1.js"></script>
@@ -105,6 +105,43 @@
         </div>
     </section><!-- //.sec1 -->
     <section id="sec2"></section>
+    <!-- <section id="sec3" class="slide-section">
+        <div class="slides-wrapper">
+            <div class="group1 slide-item">
+                <div class="main">
+                    <img src="./images/main1.png" alt="타이레놀이미지">
+                </div>
+                <div class="des">
+                    <h1>15분만에 빠르게</h1>
+                    <h2>타이레놀정 500mg</h2>
+                    <p>복용 즉시 녹기 시작해 5분 안에 완전히 용해되어 <br>15분 만에 효과 발현</p>
+                    <p class="product"><a href="#">제품 전체보기 <img src="./images/right.png" alt="제품 전체보기 화살표"></a></p>
+                </div>
+            </div>
+            <div class="group1 slide-item">
+                <div class="main">
+                    <img src="./images/main2.png" alt="타이레놀이미지">
+                </div>
+                <div class="des">
+                    <h1>6가지 감기증상, 한 알로 </h1>
+                    <h2>타이레놀콜드-에스정</h2>
+                    <p>다양한 감기 증상 완화를 위한 <br> 4가지 복합성분의 종합감기약</p>
+                    <p class="product"><a href="#">제품 전체보기 <img src="./images/right.png" alt="제품 전체보기 화살표"></a></p>
+                </div>
+            </div>
+            <div class="group1 slide-item">
+                <div class="main">
+                    <img src="./images/main3.png" alt="타이레놀이미지">
+                </div>
+                <div class="des1">
+                    <h1>소중한 우리 아이를 위한 마음편한 해열진통제</h1>
+                    <h2>어린이 타이레놀 현탁액</h2>
+                    <p>생후 4개월부터 먹일 수 있는 <br>액상형 해열 진통제</p>
+                    <p class="product"><a href="#">제품 전체보기 <img src="./images/right.png" alt="제품 전체보기 화살표"></a></p>
+                </div>
+            </div>
+        </div>
+    </section> -->
 
 </body>
 
