--- a/70_pf/tylenol/sub/headache.html
+++ b/70_pf/tylenol/sub/headache.html
@@ -40,8 +40,8 @@
                 </li>
                 <li><a href="#">증상별가이드</a>
                     <ul class="sub-list">
-                        <li><a href="#">두통 </a></li>
-                        <li><a href="#">감기 · 독감 </a></li>
+                        <li><a href="headache.html">두통 </a></li>
+                        <li><a href="cold.html">감기 · 독감 </a></li>
                         <li><a href="#">몸살 · 근육통 </a></li>
                         <li><a href="#">우먼스케어 </a></li>
                         <li><a href="#">열 · 귀앓이 </a></li>
