--- a/70_pf/tylenol/index.html
+++ b/70_pf/tylenol/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>타이레놀</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="/w0310/70_pf/tylenol/css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="./script/sec1.js"></script>
-    <script src="./script/header.js"></script>
+    <script src="/w0310/70_pf/tylenol//script/sec1.js"></script>
+    <script src="/w0310/70_pf/tylenol//script/header.js"></script>
+    <script src="/w0310/70_pf/tylenol//script/section2.js"></script>
 
 </head>
 
@@ -18,11 +19,11 @@
         <div class="header-container">
             <div class="logo">
                 <a href="#">
-                    <img src="./images/header/logo.png" alt="타이레놀 로고">
+                    <img src="/w0310/70_pf/tylenol/images/header/logo.png" alt="타이레놀 로고">
                 </a>
             </div>
             <div class="menu-icon" id="menuToggle">
-                <img src="./images/header/ham_btn.png" alt="햄버거버튼">
+                <img src="/w0310/70_pf/tylenol/images/header/ham_btn.png" alt="햄버거버튼">
             </div>
         </div>
     </header>
@@ -30,8 +31,10 @@
     <div class="overlay" id="overlay">
         <nav class="side-nav">
             <div class="nav-header">
-                <div class="logo1"><a href="#"><img src="./images/header/logo.png" alt="타이레놀 로고"></a></div>
-                <div class="close-btn" id="closeBtn"><img src="./images/header/ham_btn2.png" alt="햄버거버튼"></div>
+                <div class="logo1"><a href="#"><img src="/w0310/70_pf/tylenol/images/header/logo.png" alt="타이레놀 로고"></a>
+                </div>
+                <div class="close-btn" id="closeBtn"><img src="/w0310/70_pf/tylenol/images/header/ham_btn2.png"
+                        alt="햄버거버튼"></div>
             </div>
             <ul class="nav-list">
                 <li><a href="#">제품소개</a>
@@ -67,17 +70,18 @@
                 </li>
             </ul>
             <div class="pill">
-                <img src="./images/header/pill.png" alt="알약이미지">
+                <img src="/w0310/70_pf/tylenol/images/header/pill.png" alt="알약이미지">
             </div>
         </nav>
-    </div><!-- //.header navigation -->
+    </div><!-- //.overlay -->
+    <!---------------------------------------- header navigation ---------------------------------------->
 
 
     <section id="sec1">
         <div class="sec1_slider">
             <div class="sec1_container_1">
                 <div>
-                    <div class="img_1"><img src="./images/section1/main1.png" alt="타이레놀정500mg"></div>
+                    <div class="img_1"><img src="/w0310/70_pf/tylenol/images/section1/main1.png" alt="타이레놀정500mg"></div>
                     <h2 class="font_1">Quick &</h2>
                     <h2 class="font_2">15 Min</h2>
                     <h3 class="font_3">즉시 녹아 15분 만에 빠르게</h3>
@@ -86,7 +90,7 @@
             </div>
             <div class="sec1_container_2">
                 <div>
-                    <div class="img_1"><img src="./images/section1/main2.png" alt="타이레놀이알서방정"></div>
+                    <div class="img_1"><img src="/w0310/70_pf/tylenol/images/section1/main2.png" alt="타이레놀이알서방정"></div>
                     <h2 class="font_1">Long &</h2>
                     <h2 class="font_2">8 Hours</h2>
                     <h3 class="font_3">근육통에 8시간 내내</h3>
@@ -95,7 +99,7 @@
             </div>
             <div class="sec1_container_3">
                 <div>
-                    <div class="img_1"><img src="./images/section1/main3.png" alt="타이레놀콜드에스정"></div>
+                    <div class="img_1"><img src="/w0310/70_pf/tylenol/images/section1/main3.png" alt="타이레놀콜드에스정"></div>
                     <h2 class="font_1">6 Colds</h2>
                     <h2 class="font_2">& 1 Pill</h2>
                     <h3 class="font_3">6가지 감기 증상, 한 알로</h3>
@@ -104,44 +108,166 @@
             </div>
         </div>
     </section><!-- //.sec1 -->
-    <section id="sec2"></section>
-    <!-- <section id="sec3" class="slide-section">
+
+
+    <section id="section2">
+        <div id="bg"></div>
+        <div id="product">
+            <img src="/w0310/70_pf/tylenol/images/section2/1.png" alt="타이레놀정">
+        </div>
+
+        <div id="first" class="active">
+            <div>
+                <h3>15분만에 빠르게</h3>
+                <h2>타이레놀</h2>
+                <p>15분만에 빠르게 작용해<br>4시간 동안 진통 효과</p>
+            </div>
+            <div class="tag">
+                <span>#타이레놀</span>
+                <span>#효과빠른</span>
+                <span>#진통제</span>
+            </div>
+        </div>
+        <div id="second">
+            <h2>WHY? <span>타이레놀</span></h2>
+            <div>
+                <div class="image"><img src="/w0310/70_pf/tylenol/images/section2/15min.png" alt="아이콘"></div>
+                <div class="text">
+                    <h3>15분만에 효과가 발현해 3시간 내내 지속</h3>
+                    <p>복용 즉시 녹기 시작해 5분만에 완전히 용해되어<br>
+                        15분만에 효과가 발현합니다.</p>
+                </div>
+            </div>
+            <div>
+                <div class="image"><img src="/w0310/70_pf/tylenol/images/section2/migraine.png" alt="아이콘"></div>
+                <div class="text">
+                    <h3>일상 속 다양한 통증에 효과적</h3>
+                    <p>타이레놀은 두통, 발열, 근육통, 생리통과 같은<br>
+                        다양한 종류의 통증을 일시적으로 완화시켜 줍니다.</p>
+                </div>
+            </div>
+            <div>
+                <div class="image"><img src="/w0310/70_pf/tylenol/images/section2/stomach.png" alt="아이콘"></div>
+                <div class="text">
+                    <h3>아세트아미노펜 단일 성분으로 빈속 복용 가능</h3>
+                    <p>아세트아미노펜은 위 점막을 보호하는 COX-1 작용을<br>
+                        방해하지 않아 위장장애 부담이 적습니다.</p>
+                </div>
+            </div>
+        </div>
+        <div id="third">
+            <h2>통증 완화를 위한 선택</h2>
+            <p>처방전 없이 구입할 수 있는 의약품 중 진통제를 선택해야 한다면,<br>타이레놀 계열인 아세트아미노펜 진통제가 안전합니다.
+                <br>아세트아미노펜은 다음과 같은 통증을 일시적으로 완화시켜줍니다.
+            </p>
+            <div>
+                <div>
+                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/head.png" alt="두통"></div>
+                    <p>두통</p>
+                </div>
+                <div>
+                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/shoulders.png" alt="근육통"></div>
+                    <p>근육통</p>
+                </div>
+                <div>
+                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/back.png" alt="허리통증"></div>
+                    <p>허리통증</p>
+                </div>
+                <div>
+                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/knee.png" alt="가벼운 관절통"></div>
+                    <p>가벼운 관절통</p>
+                </div>
+                <div>
+                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/nose.png" alt="감기"></div>
+                    <p>감기</p>
+                </div>
+                <div>
+                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/tooth.png" alt="치통"></div>
+                    <p>치통</p>
+                </div>
+                <div>
+                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/femenine.png" alt="월경통"></div>
+                    <p>월경통</p>
+                </div>
+                <div>
+                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/thermometer.png" alt="해열 효과">
+                    </div>
+                    <p>해열 효과</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="sec3" class="slide-section">
         <div class="slides-wrapper">
             <div class="group1 slide-item">
                 <div class="main">
-                    <img src="./images/main1.png" alt="타이레놀이미지">
+                    <img src="images/section3/main1.png" alt="타이레놀이미지">
                 </div>
                 <div class="des">
                     <h1>15분만에 빠르게</h1>
                     <h2>타이레놀정 500mg</h2>
                     <p>복용 즉시 녹기 시작해 5분 안에 완전히 용해되어 <br>15분 만에 효과 발현</p>
-                    <p class="product"><a href="#">제품 전체보기 <img src="./images/right.png" alt="제품 전체보기 화살표"></a></p>
+                    <p class="product"><a href="#">제품 전체보기 <img src="images/section3/right.png" alt="제품 전체보기 화살표"></a>
+                    </p>
                 </div>
             </div>
             <div class="group1 slide-item">
                 <div class="main">
-                    <img src="./images/main2.png" alt="타이레놀이미지">
+                    <img src="images/section3/main2.png" alt="타이레놀이미지">
                 </div>
                 <div class="des">
                     <h1>6가지 감기증상, 한 알로 </h1>
                     <h2>타이레놀콜드-에스정</h2>
                     <p>다양한 감기 증상 완화를 위한 <br> 4가지 복합성분의 종합감기약</p>
-                    <p class="product"><a href="#">제품 전체보기 <img src="./images/right.png" alt="제품 전체보기 화살표"></a></p>
+                    <p class="product"><a href="#">제품 전체보기 <img src="images/section3/right.png" alt="제품 전체보기 화살표"></a>
+                    </p>
                 </div>
             </div>
             <div class="group1 slide-item">
                 <div class="main">
-                    <img src="./images/main3.png" alt="타이레놀이미지">
+                    <img src="images/section3/main3.png" alt="타이레놀이미지">
                 </div>
                 <div class="des1">
                     <h1>소중한 우리 아이를 위한 마음편한 해열진통제</h1>
                     <h2>어린이 타이레놀 현탁액</h2>
                     <p>생후 4개월부터 먹일 수 있는 <br>액상형 해열 진통제</p>
-                    <p class="product"><a href="#">제품 전체보기 <img src="./images/right.png" alt="제품 전체보기 화살표"></a></p>
+                    <p class="product"><a href="#">제품 전체보기 <img src="images/section3/right.png" alt="제품 전체보기 화살표"></a>
+                    </p>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
+    <section id="footer" class="footer-section">
+        <footer>
+            <div class="footer_menu">
+                <a href="#">법적고지</a>
+                <a href="#">개인정보처리방침</a>
+                <a href="#">공지사항</a>
+            </div>
+            <div class="footer_menu_line"></div>
+            <div class="info">
+                <div class="logo2">
+                    <a href="#"><img src="/w0310/70_pf/tylenol/images/header/logo.png" alt="하단로고"></a>
+                </div>
+                <div class="write">
+                    <p>한국존슨앤드존슨판매(유) | 서울특별시 용산구 한강대로 92 LS용산타워 27층 | 대표이사 : 백준혁 | 대표전화 : 080-791-1414 (수신자부담)
+                        <br>광고심의필
+                        :
+                        (PC) 2024-1718-003300 (MO) 2025-1752-000200
+                    </p>
+                    <p>이 사이트는 대한민국 사용자만을 위해 한국존슨앤드존슨판매(유)에서 제작하였으며, 내용상 모든 책임은 한국존슨앤드존슨판매(유)에 있습니다. <br>본 홈페이지상의
+                        건강정보는
+                        교육적인
+                        목적으로 제공되며, 의사와의 상담을 대신하지 않습니다.</p>
+                    <p>Copyright© 2023 Kenvue Inc. All rights reserved.</p>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+        </footer>
 
 </body>
 
