--- a/70_pf/tylenol/section2/section2.html
+++ b/70_pf/tylenol/section2/section2.html
@@ -8,11 +8,11 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/w0310/70_pf/tylenol/css/header.css">
-    <link rel="stylesheet" href="/w0310/70_pf/tylenol/css/section2.css">
+    <link rel="stylesheet" href="section2.css">
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="/w0310/70_pf/tylenol/script/header.js"></script>
-    <script src="/w0310/70_pf/tylenol/script/section2.js"></script>
+    <script src="section2.js"></script>
 </head>
 
 <body>
