--- a/70_pf/tylenol/index.html
+++ b/70_pf/tylenol/index.html
@@ -10,7 +10,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="/w0310/70_pf/tylenol//script/sec1.js"></script>
     <script src="/w0310/70_pf/tylenol//script/header.js"></script>
-    <script src="/w0310/70_pf/tylenol//script/section2.js"></script>
+    <!-- <script src="/w0310/70_pf/tylenol//script/section2.js"></script> -->
+    <script src="/w0310/70_pf/tylenol/script/all.js"></script>
 
 </head>
 
@@ -111,92 +112,94 @@
 
 
     <section id="section2">
-        <div id="bg"></div>
-        <div id="product">
-            <img src="/w0310/70_pf/tylenol/images/section2/1.png" alt="타이레놀정">
-        </div>
-
-        <div id="first" class="active">
-            <div>
-                <h3>15분만에 빠르게</h3>
-                <h2>타이레놀</h2>
-                <p>15분만에 빠르게 작용해<br>4시간 동안 진통 효과</p>
+        <div class="section2_wrapper">
+            <div id="bg"></div>
+            <div id="product">
+                <img src="/w0310/70_pf/tylenol/images/section2/1.png" alt="타이레놀정">
             </div>
-            <div class="tag">
-                <span>#타이레놀</span>
-                <span>#효과빠른</span>
-                <span>#진통제</span>
-            </div>
-        </div>
-        <div id="second">
-            <h2>WHY? <span>타이레놀</span></h2>
-            <div>
-                <div class="image"><img src="/w0310/70_pf/tylenol/images/section2/15min.png" alt="아이콘"></div>
-                <div class="text">
-                    <h3>15분만에 효과가 발현해 3시간 내내 지속</h3>
-                    <p>복용 즉시 녹기 시작해 5분만에 완전히 용해되어<br>
-                        15분만에 효과가 발현합니다.</p>
+            <div id="first" class="active">
+                <div>
+                    <h3>15분만에 빠르게</h3>
+                    <h2>타이레놀</h2>
+                    <p>15분만에 빠르게 작용해<br>4시간 동안 진통 효과</p>
+                </div>
+                <div class="tag">
+                    <span>#타이레놀</span>
+                    <span>#효과빠른</span>
+                    <span>#진통제</span>
                 </div>
             </div>
-            <div>
-                <div class="image"><img src="/w0310/70_pf/tylenol/images/section2/migraine.png" alt="아이콘"></div>
-                <div class="text">
-                    <h3>일상 속 다양한 통증에 효과적</h3>
-                    <p>타이레놀은 두통, 발열, 근육통, 생리통과 같은<br>
-                        다양한 종류의 통증을 일시적으로 완화시켜 줍니다.</p>
-                </div>
-            </div>
-            <div>
-                <div class="image"><img src="/w0310/70_pf/tylenol/images/section2/stomach.png" alt="아이콘"></div>
-                <div class="text">
-                    <h3>아세트아미노펜 단일 성분으로 빈속 복용 가능</h3>
-                    <p>아세트아미노펜은 위 점막을 보호하는 COX-1 작용을<br>
-                        방해하지 않아 위장장애 부담이 적습니다.</p>
-                </div>
-            </div>
-        </div>
-        <div id="third">
-            <h2>통증 완화를 위한 선택</h2>
-            <p>처방전 없이 구입할 수 있는 의약품 중 진통제를 선택해야 한다면,<br>타이레놀 계열인 아세트아미노펜 진통제가 안전합니다.
-                <br>아세트아미노펜은 다음과 같은 통증을 일시적으로 완화시켜줍니다.
-            </p>
-            <div>
+            <div id="second">
+                <h2>WHY? <span>타이레놀</span></h2>
                 <div>
-                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/head.png" alt="두통"></div>
-                    <p>두통</p>
-                </div>
-                <div>
-                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/shoulders.png" alt="근육통"></div>
-                    <p>근육통</p>
-                </div>
-                <div>
-                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/back.png" alt="허리통증"></div>
-                    <p>허리통증</p>
-                </div>
-                <div>
-                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/knee.png" alt="가벼운 관절통"></div>
-                    <p>가벼운 관절통</p>
-                </div>
-                <div>
-                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/nose.png" alt="감기"></div>
-                    <p>감기</p>
-                </div>
-                <div>
-                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/tooth.png" alt="치통"></div>
-                    <p>치통</p>
-                </div>
-                <div>
-                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/femenine.png" alt="월경통"></div>
-                    <p>월경통</p>
-                </div>
-                <div>
-                    <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/thermometer.png" alt="해열 효과">
+                    <div class="image"><img src="/w0310/70_pf/tylenol/images/section2/15min.png" alt="아이콘"></div>
+                    <div class="text">
+                        <h3>15분만에 효과가 발현해 3시간 내내 지속</h3>
+                        <p>복용 즉시 녹기 시작해 5분만에 완전히 용해되어<br>
+                            15분만에 효과가 발현합니다.</p>
                     </div>
-                    <p>해열 효과</p>
+                </div>
+                <div>
+                    <div class="image"><img src="/w0310/70_pf/tylenol/images/section2/migraine.png" alt="아이콘"></div>
+                    <div class="text">
+                        <h3>일상 속 다양한 통증에 효과적</h3>
+                        <p>타이레놀은 두통, 발열, 근육통, 생리통과 같은<br>
+                            다양한 종류의 통증을 일시적으로 완화시켜 줍니다.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="image"><img src="/w0310/70_pf/tylenol/images/section2/stomach.png" alt="아이콘"></div>
+                    <div class="text">
+                        <h3>아세트아미노펜 단일 성분으로 빈속 복용 가능</h3>
+                        <p>아세트아미노펜은 위 점막을 보호하는 COX-1 작용을<br>
+                            방해하지 않아 위장장애 부담이 적습니다.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="third">
+                <h2>통증 완화를 위한 선택</h2>
+                <p>처방전 없이 구입할 수 있는 의약품 중 진통제를 선택해야 한다면,<br>타이레놀 계열인 아세트아미노펜 진통제가 안전합니다.
+                    <br>아세트아미노펜은 다음과 같은 통증을 일시적으로 완화시켜줍니다.
+                </p>
+                <div>
+                    <div>
+                        <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/head.png" alt="두통"></div>
+                        <p>두통</p>
+                    </div>
+                    <div>
+                        <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/shoulders.png" alt="근육통"></div>
+                        <p>근육통</p>
+                    </div>
+                    <div>
+                        <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/back.png" alt="허리통증"></div>
+                        <p>허리통증</p>
+                    </div>
+                    <div>
+                        <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/knee.png" alt="가벼운 관절통"></div>
+                        <p>가벼운 관절통</p>
+                    </div>
+                    <div>
+                        <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/nose.png" alt="감기"></div>
+                        <p>감기</p>
+                    </div>
+                    <div>
+                        <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/tooth.png" alt="치통"></div>
+                        <p>치통</p>
+                    </div>
+                    <div>
+                        <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/femenine.png" alt="월경통"></div>
+                        <p>월경통</p>
+                    </div>
+                    <div>
+                        <div class="circle"><img src="/w0310/70_pf/tylenol/images/section2/thermometer.png" alt="해열 효과">
+                        </div>
+                        <p>해열 효과</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section><!-- sec2 -->
+
     <section id="sec3" class="slide-section">
         <div class="slides-wrapper">
             <div class="group1 slide-item">
