--- a/70_pf/tylenol/index.html
+++ b/70_pf/tylenol/index.html
@@ -239,7 +239,8 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section><!-- sec3 -->
+
     <section id="footer" class="footer-section">
         <footer>
             <div class="footer_menu">
