--- a/70_pf/tylenol/sub/headache.html
+++ b/70_pf/tylenol/sub/headache.html
@@ -5,30 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>두통</title>
-    <link rel="stylesheet" href="../css/sub/headache.css">
+    <link rel="stylesheet" href="/w0310/70_pf/tylenol/css/sub/headache.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="../script/header.js"></script>
 </head>
 
 <body>
     <header class="header">
         <div class="header-container">
             <div class="logo">
-                <a href="../index.html">
-                    <img src="../images/header/logo.png" alt="타이레놀 로고">
+                <a href="/w0310/70_pf/tylenol/index.html">
+                    <img src="/w0310/70_pf/tylenol/images/header/logo.png" alt="타이레놀 로고">
                 </a>
             </div>
             <div class="menu-icon" id="menuToggle">
-                <img src="../images/header/ham_btn.png" alt="햄버거버튼">
+                <img src="/w0310/70_pf/tylenol/images/header/ham_btn.png" alt="햄버거버튼">
             </div>
         </div>
     </header>
     <div class="overlay" id="overlay">
         <nav class="side-nav">
             <div class="nav-header">
-                <div class="logo1"><a href="#"><img src="../images/header/logo.png" alt="타이레놀 로고"></a></div>
-                <div class="close-btn" id="closeBtn"><img src="../images/header/ham_btn2.png" alt="햄버거버튼"></div>
+                <div class="logo1"><a href="#"><img src="/w0310/70_pf/tylenol/images/header/logo.png" alt="타이레놀 로고"></a>
+                </div>
+                <div class="close-btn" id="closeBtn"><img src="/w0310/70_pf/tylenol/images/header/ham_btn2.png"
+                        alt="햄버거버튼"></div>
             </div>
             <ul class="nav-list">
                 <li><a href="#">제품소개</a>
@@ -64,7 +65,7 @@
                 </li>
             </ul>
             <div class="pill">
-                <img src="../images/header/pill.png" alt="알약이미지">
+                <img src="/w0310/70_pf/tylenol/images/header/pill.png" alt="알약이미지">
             </div>
         </nav>
     </div><!-- //.header navigation -->
@@ -90,7 +91,7 @@
                     <div class="guide_title">
                         <h3>두통</h3>
                     </div>
-                    <div id="whatHeadache" class="tab_section">
+                    <div id="whatHeadache" class="tab_section motion">
                         <div class="tabs">
                             <a href="#whatHeadache" class="tab_button active">두통의 원인</a>
                             <a href="#headSolution" class="tab_button">두통 완화법</a>
@@ -108,7 +109,8 @@
                                         <div class="left_container_2">
                                             <a href="#">제품 보러가기 <i class="fa-solid fa-arrow-right"></i></a>
                                         </div>
-                                        <p class="guide_left_3">두통을 예방하는 가장 효과적인 방법은 두통 유발 요인을 찾아내는 것입니다. 두통 일지를 만들어 두통 발생 몇
+                                        <p class="guide_left_3">두통을 예방하는 가장 효과적인 방법은 두통 유발 요인을 찾아내는 것입니다. 두통 일지를 만들어 두통
+                                            발생 몇
                                             시간
                                             전에
                                             어떤 일이 있었는지 적어두세요.</p>
@@ -123,32 +125,38 @@
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">운동부족</p>
-                                            <p class="right_box_2">지나치게 정적인 생활 습관도 두통을 유발할 수 있습니다. 운동 요법을 시작하거나 변경하기 전에 의사와
+                                            <p class="right_box_2">지나치게 정적인 생활 습관도 두통을 유발할 수 있습니다. 운동 요법을 시작하거나 변경하기 전에
+                                                의사와
                                                 먼저 상의하세요.</p>
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">자세</p>
-                                            <p class="right_box_2">바르게 앉은 자세는 혈액순환에 도움이 됩니다. 또한 책상에 오래 앉아 있었다면 가볍게 걸어 다니는 것이
+                                            <p class="right_box_2">바르게 앉은 자세는 혈액순환에 도움이 됩니다. 또한 책상에 오래 앉아 있었다면 가볍게 걸어
+                                                다니는 것이
                                                 좋습니다.</p>
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">호르몬</p>
-                                            <p class="right_box_2">에스트로젠 수치가 떨어지면(특히 월경 직전) 두통이 발생할 확률이 높아집니다. 월경 주기를 기억해 미리
+                                            <p class="right_box_2">에스트로젠 수치가 떨어지면(특히 월경 직전) 두통이 발생할 확률이 높아집니다. 월경 주기를
+                                                기억해 미리
                                                 대비하세요.</p>
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">음식</p>
-                                            <p class="right_box_2">특정 음식은 두통을 유발할 수 있는 신경 전달 물질을 분비합니다. 이러한 식품에는 아스파탐, 카페인,
+                                            <p class="right_box_2">특정 음식은 두통을 유발할 수 있는 신경 전달 물질을 분비합니다. 이러한 식품에는 아스파탐,
+                                                카페인,
                                                 초콜릿, 알코올, 치즈 등이 있습니다.</p>
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">의약품</p>
-                                            <p class="right_box_2">일부 처방약은 두통을 유발할 가능성이 있습니다. 두통이 심해지는 느낌이 든다면 의사와 상의하세요.
+                                            <p class="right_box_2">일부 처방약은 두통을 유발할 가능성이 있습니다. 두통이 심해지는 느낌이 든다면 의사와
+                                                상의하세요.
                                             </p>
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">수면습관</p>
-                                            <p class="right_box_2">적당한 수준으로 충분한 수면을 취하세요. 또한 추운 장소에서 바르지 않은 자세로 잠들면 근육 경련을
+                                            <p class="right_box_2">적당한 수준으로 충분한 수면을 취하세요. 또한 추운 장소에서 바르지 않은 자세로 잠들면 근육
+                                                경련을
                                                 유발할 수 있습니다.</p>
                                         </div>
                                         <div class="right_box">
@@ -157,7 +165,8 @@
                                         </div>
                                         <div class="right_box">
                                             <p class="right_box_1">빛</p>
-                                            <p class="right_box_2">컴퓨터, 태양, 실내조명 등이 발산하는 강렬한 빛은 두통을 유발할 수 있습니다. 조도를 낮추고 탁상용
+                                            <p class="right_box_2">컴퓨터, 태양, 실내조명 등이 발산하는 강렬한 빛은 두통을 유발할 수 있습니다. 조도를 낮추고
+                                                탁상용
                                                 스탠드를 추가로 사용해보세요.</p>
                                         </div>
                                         <div class="right_box">
@@ -169,7 +178,7 @@
                             </div><!-- //.guide_layout -->
                         </div><!-- //.tab-content -->
                     </div><!-- //.tab_section -->
-                    <div id="headSolution" class="tab_section">
+                    <div id="headSolution" class="tab_section motion">
                         <div class="tabs">
                             <a href="#whatHeadache" class="tab_button">두통의 원인</a>
                             <a href="#headSolution" class="tab_button active">두통 완화법</a>
@@ -231,13 +240,15 @@
                 <div class="footer_menu_line"></div>
                 <div class="info">
                     <div class="logo2">
-                        <a href="#"><img src="../images/header/logo.png" alt="하단로고"></a>
+                        <a href="#"><img src="/w0310/70_pf/tylenol/images/header/logo.png" alt="하단로고"></a>
                     </div>
                     <div class="write">
-                        <p>한국존슨앤드존슨판매(유) | 서울특별시 용산구 한강대로 92 LS용산타워 27층 | 대표이사 : 백준혁 | 대표전화 : 080-791-1414 (수신자부담) <br>광고심의필
+                        <p>한국존슨앤드존슨판매(유) | 서울특별시 용산구 한강대로 92 LS용산타워 27층 | 대표이사 : 백준혁 | 대표전화 : 080-791-1414 (수신자부담)
+                            <br>광고심의필
                             :
                             (PC) 2024-1718-003300 (MO) 2025-1752-000200</p>
-                        <p>이 사이트는 대한민국 사용자만을 위해 한국존슨앤드존슨판매(유)에서 제작하였으며, 내용상 모든 책임은 한국존슨앤드존슨판매(유)에 있습니다. <br>본 홈페이지상의 건강정보는
+                        <p>이 사이트는 대한민국 사용자만을 위해 한국존슨앤드존슨판매(유)에서 제작하였으며, 내용상 모든 책임은 한국존슨앤드존슨판매(유)에 있습니다. <br>본 홈페이지상의
+                            건강정보는
                             교육적인
                             목적으로 제공되며, 의사와의 상담을 대신하지 않습니다.</p>
                         <p>Copyright© 2023 Kenvue Inc. All rights reserved.</p>
@@ -251,6 +262,12 @@
             </footer>
         </section>
     </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="/w0310/70_pf/tylenol/script/header.js"></script>
+    <script src="/w0310/70_pf/tylenol/script/sub_guide.js"></script>
 </body>
 
 </html>
