--- a/70_pf/tylenol/sub/cold.html
+++ b/70_pf/tylenol/sub/cold.html
@@ -5,30 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>감기 · 독감</title>
-    <link rel="stylesheet" href="../css/sub/cold.css">
+    <link rel="stylesheet" href="/w0310/70_pf/tylenol/css/sub/cold.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="../script/header.js"></script>
+
 </head>
 
 <body>
     <header class="header">
         <div class="header-container">
             <div class="logo">
-                <a href="../index.html">
-                    <img src="../images/header/logo.png" alt="타이레놀 로고">
+                <a href="/w0310/70_pf/tylenol/index.html">
+                    <img src="/w0310/70_pf/tylenol/images/header/logo.png" alt="타이레놀 로고">
                 </a>
             </div>
             <div class="menu-icon" id="menuToggle">
-                <img src="../images/header/ham_btn.png" alt="햄버거버튼">
+                <img src="/w0310/70_pf/tylenol/images/header/ham_btn.png" alt="햄버거버튼">
             </div>
         </div>
     </header>
     <div class="overlay" id="overlay">
         <nav class="side-nav">
             <div class="nav-header">
-                <div class="logo1"><a href="#"><img src="../images/header/logo.png" alt="타이레놀 로고"></a></div>
-                <div class="close-btn" id="closeBtn"><img src="../images/header/ham_btn2.png" alt="햄버거버튼"></div>
+                <div class="logo1"><a href="#"><img src="/w0310/70_pf/tylenol/images/header/logo.png" alt="타이레놀 로고"></a>
+                </div>
+                <div class="close-btn" id="closeBtn"><img src="/w0310/70_pf/tylenol/images/header/ham_btn2.png"
+                        alt="햄버거버튼"></div>
             </div>
             <ul class="nav-list">
                 <li><a href="#">제품소개</a>
@@ -64,7 +65,7 @@
                 </li>
             </ul>
             <div class="pill">
-                <img src="../images/header/pill.png" alt="알약이미지">
+                <img src="/w0310/70_pf/tylenol/images/header/pill.png" alt="알약이미지">
             </div>
         </nav>
     </div><!-- //.header navigation -->
@@ -78,11 +79,11 @@
                     </div>
                     <div class="sub_menu">
                         <ul>
-                            <li><a href="./headache.html">두통</a></li>
-                            <li><a href="./cold.html">감기 · 독감</a></li>
-                            <li><a href="./myalgia.html">몸살 · 근육통</a></li>
-                            <li><a href="./cramps.html">우먼스케어</a></li>
-                            <li><a href="./heat.html">열 · 귀앓이</a></li>
+                            <li><a href="headache.html">두통</a></li>
+                            <li><a href="cold.html">감기 · 독감</a></li>
+                            <li><a href="myalgia.html">몸살 · 근육통</a></li>
+                            <li><a href="cramps.html">우먼스케어</a></li>
+                            <li><a href="heat.html">열 · 귀앓이</a></li>
                         </ul>
                     </div>
                 </div>
@@ -90,7 +91,7 @@
                     <div class="guide_title">
                         <h3>감기 · 독감</h3>
                     </div>
-                    <div id="cold_1" class="tab_section">
+                    <div id="cold_1" class="tab_section motion">
                         <div class="tabs">
                             <a href="#cold_1" class="tab_button active">감기와 독감</a>
                             <a href="#cold_2" class="tab_button">코감기와 비염</a>
@@ -128,18 +129,23 @@
                                                 <tbody>
                                                     <tr data-title="정의">
                                                         <td>정의</td>
-                                                        <td data-label="감기">다양한 불특정의 바이러스에 의해 코, 비강, 인후 등이 있는 상기도에 감염되는 질환</td>
-                                                        <td data-label="독감">특정 바이러스에 의해 코, 비강, 인후 등이 있는 상기도에 감염되는 질환</td>
+                                                        <td data-label="감기">다양한 불특정의 바이러스에 의해 코, 비강, 인후 등이 있는 상기도에 감염되는
+                                                            질환</td>
+                                                        <td data-label="독감">특정 바이러스에 의해 코, 비강, 인후 등이 있는 상기도에 감염되는 질환
+                                                        </td>
                                                     </tr>
                                                     <tr data-title="초기증상">
                                                         <td>초기증상</td>
-                                                        <td data-label="감기">목 따가움 증상과 코막힘 증상으로부터 시작되는 경우가 대부분이며, 기침과 미열 증상을 동반</td>
-                                                        <td data-label="독감">갑자기 시작되는 경우가 대부분이며 고열과 오한을 동반함. 독감에 걸린 아이가 느끼는 통증과 불편함이 더욱 큼.</td>
+                                                        <td data-label="감기">목 따가움 증상과 코막힘 증상으로부터 시작되는 경우가 대부분이며, 기침과 미열
+                                                            증상을 동반</td>
+                                                        <td data-label="독감">갑자기 시작되는 경우가 대부분이며 고열과 오한을 동반함. 독감에 걸린 아이가
+                                                            느끼는 통증과 불편함이 더욱 큼.</td>
                                                     </tr>
                                                     <tr data-title="증상">
                                                         <td>증상</td>
                                                         <td data-label="감기">인후염,콧물, 코막힘,기침, 재채기,열</td>
-                                                        <td data-label="독감">열, 오한, 인후염, 콧물, 기침(주로 마른 기침), 코막힘, 전신의 통증 무기력감, 피로</td>
+                                                        <td data-label="독감">열, 오한, 인후염, 콧물, 기침(주로 마른 기침), 코막힘, 전신의 통증
+                                                            무기력감, 피로</td>
                                                     </tr>
                                                     <tr data-title="지속기간">
                                                         <td>지속기간</td>
@@ -148,9 +154,11 @@
                                                     </tr>
                                                     <tr data-title="아이가 느끼는 증상">
                                                         <td>아이의 증상</td>
-                                                        <td data-label="감기">영유아 - 코를 비비고 식욕이 줄어듦<br>이후 연령대 - 불편한 호흡, 코막힘 증상 호소</td>
-                                                        <td data-label="독감">영유아 - 아파 보이거나 짜증을 부리고 잠을 많이 자며 평소보다 식욕이 줄어듦<br>이후 연령대 - 피로를 느끼고 불편함을 호소
-목이 아프다고 불평하거나, 목이 아프다는 이유로 음식이나 음료의 섭취를 거부하기도 함</td>
+                                                        <td data-label="감기">영유아 - 코를 비비고 식욕이 줄어듦<br>이후 연령대 - 불편한 호흡, 코막힘
+                                                            증상 호소</td>
+                                                        <td data-label="독감">영유아 - 아파 보이거나 짜증을 부리고 잠을 많이 자며 평소보다 식욕이
+                                                            줄어듦<br>이후 연령대 - 피로를 느끼고 불편함을 호소 목이 아프다고 불평하거나, 목이 아프다는 이유로
+                                                            음식이나 음료의 섭취를 거부하기도 함</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -160,7 +168,7 @@
                             </div><!-- //.guide_layout -->
                         </div><!-- //.tab-content -->
                     </div><!-- //.tab_section -->
-                    <div id="cold_2" class="tab_section">
+                    <div id="cold_2" class="tab_section motion">
                         <div class="tabs">
                             <a href="#cold_1" class="tab_button">감기와 독감</a>
                             <a href="#cold_2" class="tab_button active">코감기와 비염</a>
@@ -221,7 +229,7 @@
                             </div><!-- //.guide_layout -->
                         </div><!-- //.tab_content -->
                     </div><!-- //.tab_section -->
-                    <div id="cold_3" class="tab_section">
+                    <div id="cold_3" class="tab_section motion">
                         <div class="tabs">
                             <a href="#cold_1" class="tab_button">감기와 독감</a>
                             <a href="#cold_2" class="tab_button">코감기와 비염</a>
@@ -276,7 +284,7 @@
                             </div><!-- //.guide_layout -->
                         </div><!-- //.tab_content -->
                     </div><!-- //.tab_section -->
-                    <div id="cold_4" class="tab_section">
+                    <div id="cold_4" class="tab_section motion">
                         <div class="tabs">
                             <a href="#cold_1" class="tab_button">감기와 독감</a>
                             <a href="#cold_2" class="tab_button">코감기와 비염</a>
@@ -351,7 +359,7 @@
                 <div class="footer_menu_line"></div>
                 <div class="info">
                     <div class="logo2">
-                        <a href="#"><img src="../images/header/logo.png" alt="하단로고"></a>
+                        <a href="#"><img src="/w0310/70_pf/tylenol/images/header/logo.png" alt="하단로고"></a>
                     </div>
                     <div class="write">
                         <p>한국존슨앤드존슨판매(유) | 서울특별시 용산구 한강대로 92 LS용산타워 27층 | 대표이사 : 백준혁 | 대표전화 : 080-791-1414 (수신자부담)
@@ -374,6 +382,12 @@
             </footer>
         </section>
     </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="/w0310/70_pf/tylenol/script/header.js"></script>
+    <script src="/w0310/70_pf/tylenol/script/sub_guide.js"></script>
 </body>
 
 </html>
