--- a/70_pf/tylenol/index.html
+++ b/70_pf/tylenol/index.html
@@ -65,7 +65,7 @@
                 <li><a href="#">고객지원</a>
                     <ul class="sub-list">
                         <li><a href="#">FAQ </a></li>
-                        <li><a href="#">문의하기 </a></li>
+                        <li><a href="/w0310/70_pf/tylenol/sub/helpcenter.html">문의하기 </a></li>
                         <li><a href="#">회사정보</a></li>
                     </ul>
                 </li>
