--- a/70_pf/tylenol/sub/helpcenter.html
+++ b/70_pf/tylenol/sub/helpcenter.html
@@ -124,7 +124,7 @@
                                 <p class="container2_t">문의</h2>
                                 <div class="fields">
                                     <div class="form-row">
-                                        <label for="type"><span class="must1">*</span>문의 유형</label>
+                                        <label for="type"><span class="must1">*</span>문의유형</label>
                                         <select id="type" name="type" required>
                                             <option value="">선택하세요</option>
                                             <option value="general">일반 문의</option>
@@ -134,7 +134,7 @@
                                     </div>
                                     <div class="form-row">
                                         <label for="phone"><span class="must1">*</span>문의내용</label>
-                                        <textarea id="message" name="message" placeholder="문의 내용을 입력하세요"
+                                        <textarea id="message" name="message"
                                             required></textarea>
                                     </div>
                                 </div>
